Fixed images
Fixed images not showing in production and split app into more
components.

--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,11 @@
-.App {
-  text-align: center;
+
+p {
+  text-align: left;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+h1 {
+  text-align: left;
+  margin-top: 30px;
+  color: #1d0902;
+  font-family: 'Saira', sans-serif;
 }
